Tag api add restock_settings, add test
